--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
     "framer-motion": "^12.0.0",
     "next": "15.1.4",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
