--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
     "framer-motion": "^12.0.0",
