--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
     "framer-motion": "^12.0.0",
-    "next": "15.1.4",
+    "next": "^15.1.6",
     "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
